--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -6,7 +6,7 @@ on:
     - cron: '0 0 15 * *'
 
 env:
-  EXECUTE_SECOND_JOB: true # Change to false to disable the second job
+  EXECUTE_SECOND_JOB: false # Change to false to disable the second job
 
 jobs:
   sync-docs-metadata:
