--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -52,8 +52,7 @@ jobs:
       - name: Run configlet sync for test and capture output
         id: sync_test
         run: |
-          configlet_raw_output="$(./bin/configlet sync --tests 2>&1)"
-          echo "$configlet_raw_output"
+          configlet_raw_output="$(./bin/configlet sync --tests | tee .github/sync-test-output.txt)"
 
           printf "configlet output:\n%s\n" "$configlet_raw_output"
           mkdir -p temp
