--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -55,8 +55,6 @@ jobs:
           configlet_raw_output="$(./bin/configlet sync --tests 2>&1 || true)"
 
           printf "configlet output:\n%s\n" "$configlet_raw_output"
-          mkdir -p temp
-          printf '```\n%s\n```\n' "$configlet_raw_output" > temp/sync-test-output.txt
           printf 'output<<EOF\n%s\nEOF\n' "$configlet_raw_output" > "$GITHUB_OUTPUT"
 
       - name: Find existing issue for test sync
@@ -79,6 +77,8 @@ jobs:
 
       - name: Create or Update issue if tests are not synced
         if: ${{ !contains(steps.sync_test.outputs.output, 'Every exercise has up-to-date tests!') }}
+          mkdir -p temp
+          printf '```\n%s\n```\n' "${{ steps.sync_test.outputs.output }}" > temp/sync-test-output.txt
         uses: peter-evans/create-issue-from-file@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
