Testing new workflow

--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -53,11 +53,11 @@ jobs:
         id: sync_test
         continue-on-error: true
         run: |
-          configlet_raw_output="$(./bin/configlet sync --tests 2>&1 || true)"
+          configlet_raw_output="$(./bin/configlet sync --tests 2>&1)"
           exit_code=$?
 
           echo "exit_code=$exit_code" >> "$GITHUB_OUTPUT"
-          printf "output<<EOF\n%s\nEOF\n" "$configlet_raw_output" > "$GITHUB_OUTPUT"
+          printf "output<<EOF\n%s\nEOF\n" "$configlet_raw_output" >> "$GITHUB_OUTPUT"
 
           printf "configlet output:\n%s\n" "$configlet_raw_output"
 
