--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -53,18 +53,13 @@ jobs:
         id: sync_test
         continue-on-error: true
         run: |
-          output_file=/tmp/configlet_output.txt
-
-          set +e
-          ./bin/configlet sync --tests > "$output_file" 2>&1
+          set e+
+          configlet_raw_output="$(./bin/configlet sync --tests 2>&1)"
           exit_code=$?
-          set -e
-      
-          configlet_raw_output="$(cat "$output_file")"
-      
+          set e-
+
           echo "exit_code=$exit_code" >> "$GITHUB_OUTPUT"
           printf "output<<EOF\n%s\nEOF\n" "$configlet_raw_output" >> "$GITHUB_OUTPUT"
-          echo "$exit_code"
 
           printf "configlet output:\n%s\n" "$configlet_raw_output"
 
