--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Format test sync output and find existing issue
         id: find_issue
-        if: ${{ steps.sync_test.outputs.exit_code == 1 }}
+        if: ${{ steps.sync_test.outputs.exit_code != 0 }}
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
@@ -83,7 +83,7 @@ jobs:
           fi
 
       - name: Create or Update issue if tests are not synced
-        if: ${{ steps.sync_test.outputs.exit_code == 1 }}
+        if: ${{ steps.sync_test.outputs.exit_code != 0 }}
         uses: peter-evans/create-issue-from-file@e8ef132d6df98ed982188e460ebb3b5d4ef3a9cd
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
