--- a/.github/workflows/configlet-sync.yml
+++ b/.github/workflows/configlet-sync.yml
@@ -1,9 +1,7 @@
 name: Configlet Auto Sync
 
 on:
-  workflow_dispatch:
-  schedule:
-    - cron: '0 0 15 * *'
+  workflow_call:
 
 jobs:
   sync-docs-metadata:
@@ -51,15 +49,12 @@ jobs:
 
       - name: Run configlet sync for test and capture output
         id: sync_test
+        shell: bash {0}
         run: |
-          set +e
           configlet_raw_output="$(./bin/configlet sync --tests 2>&1)"
           exit_code=$?
-          set -e
-
           echo "exit_code=$exit_code" >> "$GITHUB_OUTPUT"
           printf "output<<EOF\n%s\nEOF\n" "$configlet_raw_output" >> "$GITHUB_OUTPUT"
-
           printf "configlet output:\n%s\n" "$configlet_raw_output"
 
       - name: Format test sync output and find existing issue
