--- a/exercises/practice/affine-cipher/.meta/tests.toml
+++ b/exercises/practice/affine-cipher/.meta/tests.toml
@@ -8,6 +8,27 @@ description = "encode yes"
 [785bade9-e98b-4d4f-a5b0-087ba3d7de4b]
 description = "encode no"
 
+[2854851c-48fb-40d8-9bf6-8f192ed25054]
+description = "encode OMG"
+
+[bc0c1244-b544-49dd-9777-13a770be1bad]
+description = "encode O M G"
+
+[381a1a20-b74a-46ce-9277-3778625c9e27]
+description = "encode mindblowingly"
+
+[6686f4e2-753b-47d4-9715-876fdc59029d]
+description = "encode numbers"
+
+[ae23d5bd-30a8-44b6-afbe-23c8c0c7faa3]
+description = "encode deep thought"
+
+[c93a8a4d-426c-42ef-9610-76ded6f7ef57]
+description = "encode all the letters"
+
+[0673638a-4375-40bd-871c-fb6a2c28effb]
+description = "encode with a not coprime to m"
+
 [3f0ac7e2-ec0e-4a79-949e-95e414953438]
 description = "decode exercism"
 
