--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -60,7 +60,7 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
-      - name: Test all exercises using java-test-runner
+      - name: Test chnaged exercises using java-test-runner
         run: bin/test-changed-exercise
       - name: Archive test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
