--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -60,6 +60,8 @@ jobs:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
+        with:
+          fetch-depth: 0
       - name: Test chnaged exercises using java-test-runner
         run: bin/test-changed-exercise
       - name: Archive test results
