--- a/.github/workflows/java.yml
+++ b/.github/workflows/java.yml
@@ -62,7 +62,7 @@ jobs:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8
         with:
           fetch-depth: 0
-      - name: Test chnaged exercises using java-test-runner
+      - name: Test changed exercises using java-test-runner
         run: bin/test-changed-exercise
       - name: Archive test results
         uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
