--- a/exercises/practice/allergies/.meta/config.json
+++ b/exercises/practice/allergies/.meta/config.json
@@ -3,7 +3,7 @@
   "contributors": [
     "c-thorntn",
     "FridaTveit",
-    "jmluy",
+    "jmlguy",
     "jmrunkle",
     "jtigger",
     "kytrinyx",
