--- a/exercises/practice/allergies/.meta/config.json
+++ b/exercises/practice/allergies/.meta/config.json
@@ -1,9 +1,9 @@
 {
   "authors": [],
   "contributors": [
-    "c-thorntn",
+    "c-thornton",
     "FridaTveit",
-    "jmlguy",
+    "jmluy",
     "jmrunkle",
     "jtigger",
     "kytrinyx",
