Fix typo in username from 'lemoncurry' to 'lemoncury'

--- a/exercises/practice/acronym/.meta/config.json
+++ b/exercises/practice/acronym/.meta/config.json
@@ -8,7 +8,7 @@
     "jmrunkle",
     "jtigger",
     "kytrinyx",
-    "lemoncurry",
+    "lemoncury",
     "miranikaran01",
     "mirkoperillo",
     "moaxcp",
