Fix username typo in config.json

--- a/exercises/practice/all-your-base/.meta/config.json
+++ b/exercises/practice/all-your-base/.meta/config.json
@@ -7,7 +7,7 @@
     "FridaTveit",
     "jmrunkle",
     "jtigger",
-    "katmpatz",
+    "katmpat",
     "kytrinyx",
     "lemoncurry",
     "miranikaran01",
